added resume pdf

--- a/node/public/index.html
+++ b/node/public/index.html
@@ -52,8 +52,7 @@
 								While I have tinkered with code on a hobby level for many years, it wasn't until more recently that 
 								I realized software development was what I wanted to do for the rest of my life. 
 								At this point I am most familiar with C, python and javascript, but I am comfortable 
-								working with other languages and learning new frameworks. This site is deployed 
-								on an AWS EC2 instance and was built using the MEAN stack. <br><br> 
+								working with other languages and learning new frameworks. <br><br> 
 								In a previous life, I studied organic chemistry.</p>
 							</article>
 
@@ -61,15 +60,19 @@
 							<article id="resume">
 								<h2 class="major">Resume</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Experience</p>
-								<p>Education</p>
+								<p><a href = "resume.pdf">Click here</a></p>
 							</article>
 
 						<!-- Projects -->
 							<article id="projects">
-								<h2 class="major">Projects</h2>
+								<h2 class="major">Code I've written</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Coming Soon. :)</p>
+								<p><a href = "https://github.com/alexbuechele/homepage">Personal Site</a></p>
+								<p>This site is hosted on an Amazon EC2 instance. It uses NGINX for reverse proxy,
+									Node and Express on the backend, PostgreSQL for data storage and a landing page 
+									template from HTML5UP.</p>
+								<p><a href = "https://github.com/alexbuechele/leetcode">Leetcode Solutions</a></p>
+								<p>Problems I've solved on leetcode or other coding challenge sites.</p>
 							</article>
 
 						<!-- Contact -->
